kubernetes/config/longhorn/auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: zitadel-auth
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  forwardAuth:
    address: "http://zitadel-auth-proxy.zitadel.svc.cluster.local:4181/api/verify"
    authResponseHeaders:
    - "Remote-User"
    - "Remote-Name"
    - "Remote-Email"
    - "Remote-Groups"
    trustForwardHeader: true
