kubernetes/config/longhorn/longhorn-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  labels:
    app.kubernetes.io/name: longhorn-dashboard
    app.kubernetes.io/component: infrastructure
    app.kubernetes.io/part-of: core
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.middlewares: longhorn-system-default-headers@kubernetescrd
    argocd.argoproj.io/sync-wave: "10"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - longhorn.stg.rzp.one
      secretName: longhorn-dashboard-tls
  rules:
    - host: longhorn.stg.rzp.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
